# block_matrix_format_performance

./: .gitmodules  CMakeLists.txt  main.cpp  measurement_class.h
common/: CMakeLists.txt  matrix_converters.h  measurement_class.cpp  mmio.h
docs/: post.tex
fem_2d/: golden_gate_bridge.h
gpu/: CMakeLists.txt  bicgstab.cu  bicgstab.h  gpu_matrix_multiplier.cu  gpu_matrix_multiplier.h
plot/: plot.py
results/: bs_range.json  result.json
